--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Configuration de la base de données MySQL
- spring.datasource.url=jdbc:mysql://localhost:8889/api
+ spring.datasource.url=jdbc:mysql://localhost:3306/api
  spring.jpa.hibernate.ddl-auto= update
  spring.datasource.username=root
- spring.datasource.password=root
- spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+ spring.datasource.password=
+ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
  logging.level.org.springframework.security=DEBUG
 
 #  jwt.secret = "123455"
