--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Configuration de la base de données MySQL
- spring.datasource.url=jdbc:mysql://localhost:3306/db_marmite
+ spring.datasource.url=jdbc:mysql://localhost:3306/api
  spring.jpa.hibernate.ddl-auto= update
  spring.datasource.username=root
- spring.datasource.password=Bn&l7n97411
+ spring.datasource.password=
  spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
  logging.level.org.springframework.security=DEBUG
 
