--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Configuration de la base de données MySQL
- spring.datasource.url=jdbc:mysql://192.168.1.30:3307/db_marmite
+ spring.datasource.url=jdbc:mysql://192.168.1.30:3307/marmite
  spring.jpa.hibernate.ddl-auto=update
- spring.datasource.username=root
- spring.datasource.password=Bn&l7n97411
+ spring.datasource.username=marmite
+ spring.datasource.password=Dofus97411
  spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
  logging.level.org.springframework.security=DEBUG
  server.port=8082
